hphp/test/slow/reified_generics/error-class-creation-4.php.expectf
Fatal error: Cannot create a new instance of a non-reified class with the reified generics in %s on line 5
